Changelog
=========


1.1.4 (unreleased)
------------------

- Fix styles for h-tags inside of header tags in portlet row.
  [mathias.leimgruber]

- Add translation for pathbar for en, it, fr and de
  [Kevin Bieri]

- Hide navigation column in tablet view on customer request
  [Kevin Bieri]

- Use same styling for heading 3 as for strong
  [Kevin Bieri]

- Show subsite title in pathbar instead of Home on subsites.
  [mathias.leimgruber]

- Add text to zoom buttons, since wcag 2.0 doesn't allow empty links.
  [mathias.leimgruber]

- Remove horizontal scrollbar in IE.
  [Kevin Bieri]

- Improve simplelayout styles (Dragging new layout + Simplelayout Porlet).
  [mathias.leimgruber]

- Implement moble logo viewlet.
  [mathias.leimgruber]

- Support a mobile logo.
  [mathias.leimgruber]

- Support the new html structure of the "current folder" item in the autocompletewidget.
  [mathias.leimgruber]

- Replace globalnav-selected with menu-selected id in rules.xml.
  [mathias.leimgruber]

- Add support for googles sitelinks searchbox.
  [mathias.leimgruber]


1.1.3 (2016-04-27)
------------------

- Adjust simplelayout layout fix in 1.1.2 to fix layout if you drag
  a block into a column.
  [elioschmutz]


1.1.2 (2016-04-27)
------------------

- Fix broken simplelayout layouts.
  [elioschmutz]


1.1.1 (2016-04-22)
------------------

- Fix side effect with hiding search button (livesearch/detailsearch).
  Accidentally the searchButton of the contenttree widget was hidden by the last bern.web 2.0 release.
  [mathias.leimgruber]


1.1.0 (2016-04-11)
------------------

- Add empty alt attributes to img tags. [jone]

- Fix http-equiv="X-UA-Compatible" header.
  [mathias.leimgruber]

- Remove duplicate accesskey 1 on portal-logo.
  [mathias.leimgruber]

- Add a hidden h2 to the logo markup. Without this separation the logo belongs
  semantically to the service navigation. This confuses users with screenreaders.
  [mathias.leimgruber]
