@@ -1,8 +1,8 @@
 <a id="mobile-logo"
    title="Home"
    tal:condition="view/available"
-   tal:attributes="href view/navigation_root_url;
-                   title view/navigation_root_title"
+   tal:attributes="href view/url;
+                   title view/title"
    i18n:domain="plone"
    i18n:attributes="title">
     <img tal:attributes="src string:${view/navigation_root_url}/mobile_logo.png;
