@@ -1,3 +1,4 @@
+from plone import api
 from plone.app.layout.viewlets.common import LogoViewlet
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 
@@ -8,3 +9,8 @@ class MobileLogo(LogoViewlet):
     def available(self):
         """Grap a logo thru acquistion"""
         return bool(getattr(self.context, 'mobile_logo.png', False))
+
+    def update(self):
+        super(MobileLogo, self).update()
+        self.url = api.portal.get().absolute_url()
+        self.title = api.portal.get().Title()
